syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.demo";

service AnalyticsService {
  rpc CalculateGameDiscount (GameDiscountRequest) returns (GameDiscountResponse) {}
}

message GameDiscountRequest {
  int64 game_id = 1;
  int32 game_price = 2;
}

message GameDiscountResponse {
  int64 game_id = 1;
  int64 game_percent_discount = 2;
  int64 game_final_price = 3;
}